--- a/template/amazon-eks-nodegroup-multus-1ENI.yaml
+++ b/template/amazon-eks-nodegroup-multus-1ENI.yaml
@@ -39,7 +39,8 @@ Metadata:
           default: Multus CNI Configuration
         Parameters:
           - MultusSubnet1
-          - MultusSecurityGroupId
+          - MultusSecurityGroupId1
+          - MultusIpv6Req1
           - LambdaS3Bucket
           - LambdaS3Key
 
@@ -87,7 +88,7 @@ Parameters:
 
   NodeImageIdSSMParam:
     Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
-    Default: /aws/service/eks/optimized-ami/1.16/amazon-linux-2/recommended/image_id
+    Default: /aws/service/eks/optimized-ami/1.18/amazon-linux-2/recommended/image_id
     Description: AWS Systems Manager Parameter Store parameter of the AMI ID for the worker node instances.
 
   NodeInstanceType:
@@ -364,9 +365,17 @@ Parameters:
     Type: "AWS::EC2::Subnet::Id"
     Description: The subnet where multus 2ndary ENI will be connected to.
 
-  MultusSecurityGroupId:
+  MultusSecurityGroupId1:
     Type: "AWS::EC2::SecurityGroup::Id"
     Description: The combined security group of the Multus Network Interfaces. Select one from the list.
+
+  MultusIpv6Req1:
+    Type: "String"
+    Default: 'false'
+    AllowedValues:
+    - 'true'
+    - 'false'
+    Description: Define whether IPv6 required for multus subnet.
 
   VpcId:
     Type: "AWS::EC2::VPC::Id"
@@ -637,7 +646,7 @@ Resources:
   LambdaAttach2ndENI:
     Type: "AWS::Lambda::Function"
     Properties:
-      Runtime: "python2.7"
+      Runtime: "python3.8"
       Handler: "lambda_function.lambda_handler"
       Role: !GetAtt RoleLambdaAttach2ndEniCfn.Arn
       Code:
@@ -647,10 +656,8 @@ Resources:
       Environment:
         Variables:
           SubnetId1: !Ref MultusSubnet1
-          SubnetId2: ''
-          SubnetId3: ''
-          SubnetId4: ''
-          SecGroupId: !Ref MultusSecurityGroupId
+          SecGroupId1: !Ref MultusSecurityGroupId1
+          Ipv6Req1: !Ref MultusIpv6Req1
 # End of Lambda
 
 # CloudWatch Event Trigger
@@ -711,7 +718,7 @@ Resources:
               cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData, "CustomResourcePhysicalID")
 
       Handler: index.handler
-      Runtime: "python3.6"
+      Runtime: "python3.8"
       Timeout: "60"
       Role: !GetAtt RoleLambdaAttach2ndEniCfn.Arn
 
