--- a/template/amazon-eks-nodegroup-multus-4ENIs.yaml
+++ b/template/amazon-eks-nodegroup-multus-4ENIs.yaml
@@ -42,7 +42,14 @@ Metadata:
           - MultusSubnet2
           - MultusSubnet3
           - MultusSubnet4
-          - MultusSecurityGroupId
+          - MultusSecurityGroupId1
+          - MultusSecurityGroupId2
+          - MultusSecurityGroupId3
+          - MultusSecurityGroupId4
+          - MultusIpv6Req1
+          - MultusIpv6Req2
+          - MultusIpv6Req3
+          - MultusIpv6Req4
           - LambdaS3Bucket
           - LambdaS3Key
 
@@ -379,9 +386,53 @@ Parameters:
     Type: "AWS::EC2::Subnet::Id"
     Description: The subnet2 where multus 2ndary ENI will be connected to.
 
-  MultusSecurityGroupId:
+  MultusSecurityGroupId1:
     Type: "AWS::EC2::SecurityGroup::Id"
     Description: The combined security group of the Multus Network Interfaces. Select one from the list.
+
+  MultusSecurityGroupId2:
+    Type: "AWS::EC2::SecurityGroup::Id"
+    Description: The combined security group of the Multus Network Interfaces. Select one from the list.
+
+  MultusSecurityGroupId3:
+    Type: "AWS::EC2::SecurityGroup::Id"
+    Description: The combined security group of the Multus Network Interfaces. Select one from the list.
+
+  MultusSecurityGroupId4:
+    Type: "AWS::EC2::SecurityGroup::Id"
+    Description: The combined security group of the Multus Network Interfaces. Select one from the list.
+
+  MultusIpv6Req1:
+    Type: "String"
+    Default: 'false'
+    AllowedValues:
+    - 'true'
+    - 'false'
+    Description: Define whether IPv6 required for multus subnet.
+
+  MultusIpv6Req2:
+    Type: "String"
+    Default: 'false'
+    AllowedValues:
+    - 'true'
+    - 'false'
+    Description: Define whether IPv6 required for multus subnet.
+
+  MultusIpv6Req3:
+    Type: "String"
+    Default: 'false'
+    AllowedValues:
+    - 'true'
+    - 'false'
+    Description: Define whether IPv6 required for multus subnet.
+
+  MultusIpv6Req4:
+    Type: "String"
+    Default: 'false'
+    AllowedValues:
+    - 'true'
+    - 'false'
+    Description: Define whether IPv6 required for multus subnet.
 
   VpcId:
     Type: "AWS::EC2::VPC::Id"
@@ -644,7 +695,7 @@ Resources:
   LambdaAttach2ndENI:
     Type: "AWS::Lambda::Function"
     Properties:
-      Runtime: "python2.7"
+      Runtime: "python3.8"
       Handler: "lambda_function.lambda_handler"
       Role: !GetAtt RoleLambdaAttach2ndEniCfn.Arn
       Code:
@@ -657,7 +708,14 @@ Resources:
           SubnetId2: !Ref MultusSubnet2
           SubnetId3: !Ref MultusSubnet3
           SubnetId4: !Ref MultusSubnet4
-          SecGroupId: !Ref MultusSecurityGroupId
+          SecGroupId1: !Ref MultusSecurityGroupId1
+          SecGroupId2: !Ref MultusSecurityGroupId2
+          SecGroupId3: !Ref MultusSecurityGroupId3
+          SecGroupId4: !Ref MultusSecurityGroupId4
+          Ipv6Req1: !Ref MultusIpv6Req1
+          Ipv6Req2: !Ref MultusIpv6Req2
+          Ipv6Req3: !Ref MultusIpv6Req3
+          Ipv6Req4: !Ref MultusIpv6Req4
 # End of Lambda
 
 # CloudWatch Event Trigger
@@ -718,7 +776,7 @@ Resources:
               cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData, "CustomResourcePhysicalID")
 
       Handler: index.handler
-      Runtime: "python3.6"
+      Runtime: "python3.8"
       Timeout: "60"
       Role: !GetAtt RoleLambdaAttach2ndEniCfn.Arn
 
