Set DisableApiTermination: true
Set DisableApiTermination: true to avoid the EC2 instance termination via EC2 console, CLI, or API

--- a/template/amazon-eks-nodegroup-multus-nolambda_AL2023.yaml
+++ b/template/amazon-eks-nodegroup-multus-nolambda_AL2023.yaml
@@ -306,6 +306,7 @@ Resources:
     Type: "AWS::EC2::LaunchTemplate"
     Properties:
       LaunchTemplateData:
+        DisableApiTermination: true
         BlockDeviceMappings:
           - DeviceName: /dev/xvda
             Ebs:
